<resources>
    <string name="app_name">Arc</string>
    <string name="_00_00">00:00</string>
    <string name="password">Šifra</string>
    <string name="forgot_password">Zaboravili ste šifru?</string>
    <string name="sign_up">Registracija</string>
    <string name="login">Prijava</string>
    <string name="phone_number">Broj Telefona</string>
    <string name="confirm_password">Potvrdite šifru</string>
    <string name="e_mail">E-mail</string>
    <string name="lastname">Prezime</string>
    <string name="todo">TODO</string>
    <string name="mapStyle">https://api.mapbox.com/styles/v1/ajdinahmetovic/cjqw83ttvnqkf2rmw423f4v6r.html?fresh=true&amp;title=true&amp;access_token=pk.eyJ1IjoiYWpkaW5haG1ldG92aWMiLCJhIjoiY2praDZkZDQ3MG92MTNwbXBrYjRxNHllZiJ9.y9-QcaI5nQduRj_Mkv4cXg#10.0/42.362400/-71.020000/0</string>
    <string name="name">Ime</string>
    <string name="Arc">Arc</string>
    <string name="ajdin">Ajdin</string>
    <string name="nukic">Nukic</string>
    <string name="ajdinnukic16_yahoo_com">ajdinnukic16@yahoo.com</string>
    <string name="_387">+387</string>
    <string name="number">62163162</string>
    <string name="payment">Placanje</string>
    <string name="sifra">123456789</string>
</resources>
