<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.arcdrive.arc.ApplicationActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="139dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/etNamee"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:text="@string/name"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/etLastnamee"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:text="@string/lastname"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNamee"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/etEmaile"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:text="@string/e_mail"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastnamee"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/etPhonee"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:text="@string/phone_number"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmaile"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/etPassworde"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:text="@string/password"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhonee"
        app:layout_constraintVertical_bias="0.207" />

    <ImageView
        android:id="@+id/etChangeimage"
        android:layout_width="31dp"
        android:layout_height="39dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_profilepicture_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:ems="11"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/ajdin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etName1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:ems="11"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/ajdin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"
        android:textColor="#7a7d82"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etLastname"
        android:layout_width="301dp"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:ems="11"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/nukic"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511"
        android:textColor="#7a7d82"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:ems="11"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:text="@string/ajdinnukic16_yahoo_com"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etPhonee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmaile"
        app:layout_constraintVertical_bias="1.4"
        android:textColor="#7a7d82"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:text="@string/number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759"
        android:textColor="#7a7d82"/>

    <TextView
        android:id="@+id/etBiHnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/_387"
        android:textColor="#acb0b7"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:ems="11"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873"/>


</android.support.constraint.ConstraintLayout>